<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/skin_bg_color">

    <com.example.ckz.jizhang.view.view.ClearEditText
        android:id="@+id/input_phone"
        android:hint="@string/input_phone_num"
       style="@style/input_style"
        android:inputType="phone"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <com.example.ckz.jizhang.view.view.ClearEditText
            android:id="@+id/input_sms"
            style="@style/input_style"
            android:hint="@string/input_sms"
            android:layout_weight="1"/>
        <com.example.ckz.jizhang.view.view.SmsButton
            android:id="@+id/sms_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_sms"
            android:textColor="@android:color/white"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="@drawable/login_btn_bg"
            />
    </LinearLayout>
    <com.example.ckz.jizhang.view.view.ClearEditText
        style="@style/input_style"
        android:id="@+id/input_password"
        android:hint="@string/new_password"
        android:inputType="textPassword"/>
    <com.example.ckz.jizhang.view.view.ClearEditText
        style="@style/input_style"
        android:id="@+id/input_again"
        android:hint="@string/input_again"
        android:inputType="textPassword"/>
    <Button
        android:focusable="true"
        android:id="@+id/apply_btn"
        style="@style/login_btn_style"
        android:background="@drawable/login_btn_bg"
        android:text="提交"
        android:textColor="@android:color/white"/>
</LinearLayout>