<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.ckz.jizhang.view.activity.UserCenterActivity">
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"
       android:divider="@drawable/lines_drawable"
       android:showDividers="middle"
       android:background="@color/skin_bg_color">
       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="?android:attr/actionBarSize">
           <ImageView
               android:id="@+id/back_btn"
               style="@style/back_btn_style"/>
           <TextView
               android:text="@string/person_information"
               style="@style/title_text_style" />
       </RelativeLayout>
       <!--头像-->
       <RelativeLayout
           android:id="@+id/icon_layout"
           android:layout_marginLeft="@dimen/activity_horizontal_margin"
           android:layout_marginRight="@dimen/activity_horizontal_margin"
           android:layout_marginTop="8dp"
           android:layout_marginBottom="8dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           >
           <TextView
               style="@style/normal_text_style"
               android:text="@string/user_iocn"
               android:layout_centerVertical="true"/>
           <com.makeramen.roundedimageview.RoundedImageView
               android:id="@+id/user_icon"
               android:layout_width="45dp"
               android:layout_height="45dp"
               android:layout_alignParentRight="true"
               app:riv_corner_radius="5dp"
               app:riv_border_color="@color/skin_text_color"
               app:riv_border_width="1dp"
               android:src="@drawable/skin_drawable_user"
               />
       </RelativeLayout>
       <!--用户名-->
       <RelativeLayout
           android:id="@+id/name_layout"
           android:layout_marginLeft="@dimen/activity_horizontal_margin"
           android:layout_marginRight="@dimen/activity_horizontal_margin"
           android:layout_marginTop="8dp"
           android:layout_marginBottom="8dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <TextView
               style="@style/normal_text_style"
               android:text="@string/user_name"
               android:layout_centerVertical="true"/>
           <TextView
               android:id="@+id/user_name"
               style="@style/normal_text_style"
               android:layout_alignParentRight="true"
               />
       </RelativeLayout>
       <!--ID-->
       <RelativeLayout
           android:id="@+id/id_layout"
           android:layout_marginLeft="@dimen/activity_horizontal_margin"
           android:layout_marginRight="@dimen/activity_horizontal_margin"
           android:layout_marginTop="8dp"
           android:layout_marginBottom="8dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <TextView
               style="@style/normal_text_style"
               android:text="@string/user_id"
               android:layout_centerVertical="true"/>
           <TextView
               android:id="@+id/user_id"
               style="@style/normal_text_style"
               android:layout_alignParentRight="true"
               />
       </RelativeLayout>
       <!--生日-->
       <RelativeLayout
           android:id="@+id/birth_layout"
           android:layout_marginLeft="@dimen/activity_horizontal_margin"
           android:layout_marginRight="@dimen/activity_horizontal_margin"
           android:layout_marginTop="8dp"
           android:layout_marginBottom="8dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <TextView
               style="@style/normal_text_style"
               android:text="@string/user_birth"
               android:layout_centerVertical="true"/>
           <TextView
               android:id="@+id/user_birthday"
               style="@style/normal_text_style"
               android:layout_alignParentRight="true"
               />
       </RelativeLayout>
       <!--性别-->
       <RelativeLayout
           android:id="@+id/sex_layout"
           android:layout_marginLeft="@dimen/activity_horizontal_margin"
           android:layout_marginRight="@dimen/activity_horizontal_margin"
           android:layout_marginTop="8dp"
           android:layout_marginBottom="8dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <TextView
               style="@style/normal_text_style"
               android:text="@string/user_sex"
               android:layout_centerVertical="true"/>
           <TextView
               android:id="@+id/user_sex"
               style="@style/normal_text_style"
               android:layout_alignParentRight="true"
               />
       </RelativeLayout>
   </LinearLayout>

    <Button
        android:id="@+id/login_out"
       style="@style/login_btn_style"
        android:layout_alignParentBottom="true"
        android:background="@drawable/input_bg"
        android:text="退出登陆"
        android:textColor="@android:color/holo_red_dark"/>
</RelativeLayout>
